assets/style.css
/*! tailwindcss v4.2.4 | MIT License | https://tailwindcss.com */
@layer properties;
@layer theme, base, components, utilities;
@layer theme {
  :root, :host {
    --tw-font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --tw-font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
    --tw-spacing: 0.25rem;
    --tw-text-base: 1rem;
    --tw-text-base--line-height: calc(1.5 / 1);
    --tw-text-3xl: 1.875rem;
    --tw-text-3xl--line-height: calc(2.25 / 1.875);
    --tw-font-weight-semibold: 600;
    --tw-radius-3xl: 1.5rem;
    --tw-ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
    --tw-default-transition-duration: 150ms;
    --tw-default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    --tw-default-font-family: var(--tw-font-sans);
    --tw-default-mono-font-family: var(--tw-font-mono);
  }
}
@layer base {
  *, ::after, ::before, ::backdrop, ::file-selector-button {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 0 solid;
  }
  html, :host {
    line-height: 1.5;
    -webkit-text-size-adjust: 100%;
    tab-size: 4;
    font-family: var(--tw-default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
    font-feature-settings: var(--tw-default-font-feature-settings, normal);
    font-variation-settings: var(--tw-default-font-variation-settings, normal);
    -webkit-tap-highlight-color: transparent;
  }
  hr {
    height: 0;
    color: inherit;
    border-top-width: 1px;
  }
  abbr:where([title]) {
    -webkit-text-decoration: underline dotted;
    text-decoration: underline dotted;
  }
  h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: inherit;
  }
  a {
    color: inherit;
    -webkit-text-decoration: inherit;
    text-decoration: inherit;
  }
  b, strong {
    font-weight: bolder;
  }
  code, kbd, samp, pre {
    font-family: var(--tw-default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
    font-feature-settings: var(--tw-default-mono-font-feature-settings, normal);
    font-variation-settings: var(--tw-default-mono-font-variation-settings, normal);
    font-size: 1em;
  }
  small {
    font-size: 80%;
  }
  sub, sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
  }
  sub {
    bottom: -0.25em;
  }
  sup {
    top: -0.5em;
  }
  table {
    text-indent: 0;
    border-color: inherit;
    border-collapse: collapse;
  }
  :-moz-focusring {
    outline: auto;
  }
  progress {
    vertical-align: baseline;
  }
  summary {
    display: list-item;
  }
  ol, ul, menu {
    list-style: none;
  }
  img, svg, video, canvas, audio, iframe, embed, object {
    display: block;
    vertical-align: middle;
  }
  img, video {
    max-width: 100%;
    height: auto;
  }
  button, input, select, optgroup, textarea, ::file-selector-button {
    font: inherit;
    font-feature-settings: inherit;
    font-variation-settings: inherit;
    letter-spacing: inherit;
    color: inherit;
    border-radius: 0;
    background-color: transparent;
    opacity: 1;
  }
  :where(select:is([multiple], [size])) optgroup {
    font-weight: bolder;
  }
  :where(select:is([multiple], [size])) optgroup option {
    padding-inline-start: 20px;
  }
  ::file-selector-button {
    margin-inline-end: 4px;
  }
  ::placeholder {
    opacity: 1;
  }
  @supports (not (-webkit-appearance: -apple-pay-button))  or (contain-intrinsic-size: 1px) {
    ::placeholder {
      color: currentcolor;
      @supports (color: color-mix(in lab, red, red)) {
        color: color-mix(in oklab, currentcolor 50%, transparent);
      }
    }
  }
  textarea {
    resize: vertical;
  }
  ::-webkit-search-decoration {
    -webkit-appearance: none;
  }
  ::-webkit-date-and-time-value {
    min-height: 1lh;
    text-align: inherit;
  }
  ::-webkit-datetime-edit {
    display: inline-flex;
  }
  ::-webkit-datetime-edit-fields-wrapper {
    padding: 0;
  }
  ::-webkit-datetime-edit, ::-webkit-datetime-edit-year-field, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute-field, ::-webkit-datetime-edit-second-field, ::-webkit-datetime-edit-millisecond-field, ::-webkit-datetime-edit-meridiem-field {
    padding-block: 0;
  }
  ::-webkit-calendar-picker-indicator {
    line-height: 1;
  }
  :-moz-ui-invalid {
    box-shadow: none;
  }
  button, input:where([type="button"], [type="reset"], [type="submit"]), ::file-selector-button {
    appearance: button;
  }
  ::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
    height: auto;
  }
  [hidden]:where(:not([hidden="until-found"])) {
    display: none !important;
  }
}
@layer utilities {
  .tw\:static\! {
    position: static !important;
  }
  .tw\:z-0\! {
    z-index: 0 !important;
  }
  .tw\:flex {
    display: flex;
  }
  .tw\:hidden {
    display: none;
  }
  .tw\:h-8 {
    height: calc(var(--tw-spacing) * 8);
  }
  .tw\:w-8 {
    width: calc(var(--tw-spacing) * 8);
  }
  .tw\:w-full {
    width: 100%;
  }
  .tw\:max-w-full {
    max-width: 100%;
  }
  .tw\:cursor-pointer {
    cursor: pointer;
  }
  .tw\:flex-col {
    flex-direction: column;
  }
  .tw\:items-center {
    align-items: center;
  }
  .tw\:justify-between {
    justify-content: space-between;
  }
  .tw\:gap-2 {
    gap: calc(var(--tw-spacing) * 2);
  }
  .tw\:gap-6 {
    gap: calc(var(--tw-spacing) * 6);
  }
  .tw\:gap-8 {
    gap: calc(var(--tw-spacing) * 8);
  }
  .tw\:gap-10 {
    gap: calc(var(--tw-spacing) * 10);
  }
  .tw\:overflow-hidden {
    overflow: hidden;
  }
  .tw\:overflow-visible\! {
    overflow: visible !important;
  }
  .tw\:rounded-3xl {
    border-radius: var(--tw-radius-3xl);
  }
  .tw\:py-8 {
    padding-block: calc(var(--tw-spacing) * 8);
  }
  .tw\:text-3xl\! {
    font-size: var(--tw-text-3xl) !important;
    line-height: var(--tw-leading, var(--tw-text-3xl--line-height)) !important;
  }
  .tw\:text-base\! {
    font-size: var(--tw-text-base) !important;
    line-height: var(--tw-leading, var(--tw-text-base--line-height)) !important;
  }
  .tw\:font-semibold {
    --tw-font-weight: var(--tw-font-weight-semibold);
    font-weight: var(--tw-font-weight-semibold);
  }
  .tw\:transition-opacity {
    transition-property: opacity;
    transition-timing-function: var(--tw-ease, var(--tw-default-transition-timing-function));
    transition-duration: var(--tw-duration, var(--tw-default-transition-duration));
  }
  .tw\:duration-300 {
    --tw-duration: 300ms;
    transition-duration: 300ms;
  }
  .tw\:ease-in-out {
    --tw-ease: var(--tw-ease-in-out);
    transition-timing-function: var(--tw-ease-in-out);
  }
  .tw\:md\:flex {
    @media (width >= 48rem) {
      display: flex;
    }
  }
  .tw\:md\:flex-row {
    @media (width >= 48rem) {
      flex-direction: row;
    }
  }
  .tw\:md\:items-center {
    @media (width >= 48rem) {
      align-items: center;
    }
  }
  .tw\:md\:justify-end {
    @media (width >= 48rem) {
      justify-content: flex-end;
    }
  }
  .tw\:md\:gap-8 {
    @media (width >= 48rem) {
      gap: calc(var(--tw-spacing) * 8);
    }
  }
  .tw\:md\:overflow-hidden\! {
    @media (width >= 48rem) {
      overflow: hidden !important;
    }
  }
  .tw\:md\:pt-15 {
    @media (width >= 48rem) {
      padding-top: calc(var(--tw-spacing) * 15);
    }
  }
  .tw\:md\:pb-12 {
    @media (width >= 48rem) {
      padding-bottom: calc(var(--tw-spacing) * 12);
    }
  }
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-duration {
  syntax: "*";
  inherits: false;
}
@property --tw-ease {
  syntax: "*";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-font-weight: initial;
      --tw-duration: initial;
      --tw-ease: initial;
    }
  }
}

